--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -21,20 +21,20 @@
 - [5. 中断注入的触发: kvm_set_irq()](#5-中断注入的触发-kvm_set_irq)
   - [5.1. 整体流程](#51-整体流程)
   - [5.2. 中断触发入口](#52-中断触发入口)
-  - [5.2.1. kvm_irq_map_gsi(): 获取同一个irq对应的所有中断路由项(即设备)](#521-kvm_irq_map_gsi-获取同一个irq对应的所有中断路由项即设备)
-  - [5.2.2. irq_set[i].set(): 调用路由项的触发函数](#522-irq_setiset-调用路由项的触发函数)
-    - [5.2.2.1. PIC中断触发](#5221-pic中断触发)
-      - [5.2.2.1.1. 整体流程](#52211-整体流程)
-        - [5.2.2.1.2. kvm_set_pic_irq(): pic的触发方法](#52212-kvm_set_pic_irq-pic的触发方法)
-      - [5.2.2.2. IOAPIC中断触发](#5222-ioapic中断触发)
-        - [5.2.2.2.1. 整体流程](#52221-整体流程)
-        - [5.2.2.2.2. kvm_set_ioapic_irq(): ioapic的触发方法](#52222-kvm_set_ioapic_irq-ioapic的触发方法)
-          - [5.2.2.2.2.1. ioapic_service(): 根据RTE构建中断消息发往lapic](#522221-ioapic_service-根据rte构建中断消息发往lapic)
-          - [5.2.2.2.2.2. kvm_irq_delivery_to_apic(): 投递消息到lapic](#522222-kvm_irq_delivery_to_apic-投递消息到lapic)
-      - [5.2.2.3. MSI中断触发函数](#5223-msi中断触发函数)
-        - [5.2.2.3.1. 整体流程](#52231-整体流程)
-        - [5.2.2.3.2. kvm_set_msi(): msi的触发方法](#52232-kvm_set_msi-msi的触发方法)
-  - [5.3. __apic_accept_irq(): LAPIC接收中断](#53-__apic_accept_irq-lapic接收中断)
+  - [5.3. kvm_irq_map_gsi(): 获取同一个irq对应的所有中断路由项(即设备)](#53-kvm_irq_map_gsi-获取同一个irq对应的所有中断路由项即设备)
+  - [5.4. irq_set[i].set(): 调用路由项的触发函数](#54-irq_setiset-调用路由项的触发函数)
+    - [5.4.1. PIC中断触发: kvm_set_pic_irq()](#541-pic中断触发-kvm_set_pic_irq)
+      - [5.4.1.1. 整体流程](#5411-整体流程)
+      - [5.4.1.2. pic的触发入口](#5412-pic的触发入口)
+    - [5.4.2. kvm_set_ioapic_irq(): IOAPIC中断触发](#542-kvm_set_ioapic_irq-ioapic中断触发)
+      - [5.4.2.1. 整体流程](#5421-整体流程)
+      - [5.4.2.2. ioapic的触发入口](#5422-ioapic的触发入口)
+      - [5.4.2.3. ioapic_service(): 根据RTE构建中断消息发往lapic](#5423-ioapic_service-根据rte构建中断消息发往lapic)
+        - [5.4.2.3.1. kvm_irq_delivery_to_apic(): 投递消息到lapic](#54231-kvm_irq_delivery_to_apic-投递消息到lapic)
+    - [5.4.3. kvm_set_msi(): MSI中断触发函数](#543-kvm_set_msi-msi中断触发函数)
+      - [5.4.3.1. 整体流程](#5431-整体流程)
+      - [5.4.3.2. msi的触发入口](#5432-msi的触发入口)
+  - [5.5. __apic_accept_irq(): LAPIC接收中断](#55-__apic_accept_irq-lapic接收中断)
 - [6. 中断具体注入过程](#6-中断具体注入过程)
   - [6.1. 整体流程](#61-整体流程)
   - [6.2.](#62)
@@ -754,7 +754,7 @@ int kvm_set_irq(struct kvm *kvm, int irq_source_id, u32 irq, int level,
 - **irq**是**全局的中断号**，这个是转化GSI之前的，比如时钟是0号，这里就是0，而不是32
 - **level**指定**高低电平**，需要注意的是，针对**边沿触发**，需要**两个电平触发来模拟**，**先高电平再低电平**。
 
-## 5.2.1. kvm_irq_map_gsi(): 获取同一个irq对应的所有中断路由项(即设备)
+## 5.3. kvm_irq_map_gsi(): 获取同一个irq对应的所有中断路由项(即设备)
 
 回到函数中，首先要收集的是**同一irq**上注册的**所有的设备信息**，这主要在于**irq共享**的情况，非共享的情况下最多就一个。
 
@@ -783,16 +783,16 @@ int kvm_irq_map_gsi(struct kvm *kvm,
 }
 ```
 
-## 5.2.2. irq_set[i].set(): 调用路由项的触发函数
+## 5.4. irq_set[i].set(): 调用路由项的触发函数
 
 然后对于数组中的**每个元素**，调用**其set方法**
 - 在**传统pic**情况下，是`kvm_set_pic_irq`
 - 目前大都是**APIC架构**，因此set方法基本都是`kvm_set_ioapic_irq`
 - **MSI中断**消息系统的中断触发函数`kvm_set_msi`.
 
-### 5.2.2.1. PIC中断触发
+### 5.4.1. PIC中断触发: kvm_set_pic_irq()
 
-#### 5.2.2.1.1. 整体流程
+#### 5.4.1.1. 整体流程
 
 ```cpp
 kvm_set_pic_irq()  // pic的中断触发入口
@@ -819,7 +819,7 @@ kvm_set_pic_irq()  // pic的中断触发入口
  |   |   |   └─ entry->fields.remote_irr = 1; // 投递成功且电平触发模式
 ```
 
-##### 5.2.2.1.2. kvm_set_pic_irq(): pic的触发方法
+#### 5.4.1.2. pic的触发入口
 
 ```cpp
 static int kvm_set_pic_irq(struct kvm_kernel_irq_routing_entry *e,
@@ -835,9 +835,9 @@ static int kvm_set_pic_irq(struct kvm_kernel_irq_routing_entry *e,
 
 它主要是设置kvm里面的**虚拟中断控制器结构体**`struct kvm_pic`完成虚拟中断控制器的设置。如果是**边缘触发**，需要触发电平先1再0，完成一个正常的中断模拟。
 
-#### 5.2.2.2. IOAPIC中断触发
+### 5.4.2. kvm_set_ioapic_irq(): IOAPIC中断触发
 
-##### 5.2.2.2.1. 整体流程
+#### 5.4.2.1. 整体流程
 
 ```cpp
 kvm_set_ioapic_irq()  // ioapic的中断触发入口
@@ -862,7 +862,7 @@ kvm_set_ioapic_irq()  // ioapic的中断触发入口
 
 对于IOAPIC来说, 整个流程是先检查IOAPIC状态，如果符合注入条件，则**组建中断结构体**，发送到**指定VCPU**的**LAPIC**，**设置LAPIC的寄存器**，完成**虚拟中断控制器设置**。
 
-##### 5.2.2.2.2. kvm_set_ioapic_irq(): ioapic的触发方法
+#### 5.4.2.2. ioapic的触发入口
 
 ```cpp
 static int kvm_set_ioapic_irq(struct kvm_kernel_irq_routing_entry *e,
@@ -969,13 +969,13 @@ out:
 
 到这里，中断已经到达**模拟的IO-APIC**了，IO-APIC最重要的就是它的**重定向表**，针对重定向表的操作主要在`ioapic_service`中，之前都是做一些准备工作，在进入`ioapic_service`函数之前，主要有**两个任务**：
 
-1、**判断触发方式**，主要是区分**电平触发**和**边沿触发**。
+1. **判断触发方式**，主要是区分**电平触发**和**边沿触发**。
 
-2、设置**ioapic的irr寄存器**。
+2. 设置**ioapic的irr寄存器**。
 
 之前我们说过，**边沿触发**需要**两个水平触发**来**模拟**，**前后电平相反**。这里就要先做判断是对应哪一次。**只有首次触发**才会进行后续的操作，而**二次触发**相当于**reset操作**，就是把**ioapic的irr寄存器清除**。
 
-###### 5.2.2.2.2.1. ioapic_service(): 根据RTE构建中断消息发往lapic
+#### 5.4.2.3. ioapic_service(): 根据RTE构建中断消息发往lapic
 
 **边沿触发**且**旧irr**与**新的不等**, 或者, **电平触发**，就会对其进行更新，进入`ioapic_service`函数。
 
@@ -1041,7 +1041,7 @@ static int ioapic_service(struct kvm_ioapic *ioapic, int irq, bool line_status)
 
 该函数比较简单，就是**根据irq号**，获取**重定向表中的一项**，判断`kvm_ioapic_redirect_entry`**没有设置mask**，然后根据`kvm_ioapic_redirect_entry`，**构建**`kvm_lapic_irq`，这就类似于在**总线上的传递过程**。
 
-###### 5.2.2.2.2.2. kvm_irq_delivery_to_apic(): 投递消息到lapic
+##### 5.4.2.3.1. kvm_irq_delivery_to_apic(): 投递消息到lapic
 
 之后调用`kvm_irq_delivery_to_apic`，该函数会**把消息传递给相应的VCPU** ，
 
@@ -1142,9 +1142,9 @@ int kvm_apic_set_irq(struct kvm_vcpu *vcpu, struct kvm_lapic_irq *irq,
 具体需要调用`kvm_apic_set_irq`函数，继而调用`__apic_accept_irq`, 让lapic接收中断
 
 
-#### 5.2.2.3. MSI中断触发函数
+### 5.4.3. kvm_set_msi(): MSI中断触发函数
 
-##### 5.2.2.3.1. 整体流程
+#### 5.4.3.1. 整体流程
 
 ```cpp
 kvm_set_msi()  // msi的中断触发入口
@@ -1172,7 +1172,7 @@ kvm_set_msi()  // msi的中断触发入口
  |   |   |   └─ entry->fields.remote_irr = 1; // 投递成功且电平触发模式
 ```
 
-##### 5.2.2.3.2. kvm_set_msi(): msi的触发方法
+#### 5.4.3.2. msi的触发入口
 
 ```cpp
 int kvm_set_msi(struct kvm_kernel_irq_routing_entry *e,
@@ -1201,7 +1201,7 @@ kvm_set_msi() -> kvm_irq_delivery_to_apic() -> kvm_apic_set_irq() -> __apic_acce
 
 这里要注意，CPU主循环和中断注入是两个并行的过程，所以CPU处于任何状态都能进行设置中断，设置中断以后，就会引起中断退出（最后一点是个人意见，可能不正确，应该是要写到vmcs位）。另外来自QEMU的中断注入也是调用这个循环，所以在QEMU中的中断和CPU循环也是并行执行。
 
-## 5.3. __apic_accept_irq(): LAPIC接收中断
+## 5.5. __apic_accept_irq(): LAPIC接收中断
 
 然后来看下LAPIC如何接收中断，主要是在函数`__apic_accept_irq`中，这里就是将中断写入当前触发VCPU的`kvm_lapic`结构体中的相应位置。
 
