--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -1314,7 +1314,11 @@ static int __apic_accept_irq(struct kvm_lapic *apic, int delivery_mode,
 }
 ```
 
-该函数中会根据**不同的传递模式**处理消息, 大部分情况都是`APIC_DM_FIXED`，在**该模式**下，**中断**被传递到**特定的CPU**，其中会调用`kvm_x86_ops->deliver_posted_interrupt`，实际上对应于`vmx.c`中的`vmx_deliver_posted_interrupt`
+该函数中会根据**不同的传递模式**处理消息 
+
+`kvm_vcpu_kick` 产生**处理器中断ipi** , **重新调度**，为中断注入做准备。
+
+大部分情况都是`APIC_DM_FIXED`，在**该模式**下，**中断**被传递到**特定的CPU**，其中会调用`kvm_x86_ops->deliver_posted_interrupt`，实际上对应于`vmx.c`中的`vmx_deliver_posted_interrupt`
 
 ```cpp
 /*
