--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -1241,7 +1241,8 @@ static int __apic_accept_irq(struct kvm_lapic *apic, int delivery_mode,
 
                 if (apic_test_vector(vector, apic->regs + APIC_TMR) != !!trig_mode) {
                         if (trig_mode)
-                                // 中断触发，设置中断位，设置apic里面的寄存器变量，偏移地址 APIC_TMR和Linux真实APIC控制器相同
+                                // 中断触发，设置中断位，设置apic里面的寄存器变量
+                                // 偏移地址 APIC_TMR 和真实APIC控制器相同
                                 kvm_lapic_set_vector(vector,
                                                      apic->regs + APIC_TMR);
                         else
@@ -1250,6 +1251,7 @@ static int __apic_accept_irq(struct kvm_lapic *apic, int delivery_mode,
                 }
 
                 if (kvm_x86_ops.deliver_posted_interrupt(vcpu, vector)) {
+                        // 设置irr寄存器
                         kvm_lapic_set_irr(vector, apic);
                         // 请求 KVM_REQ_EVENT 事件
                         // 在下次vm-entry的时候会进行中断注入
@@ -1357,7 +1359,6 @@ static int vmx_deliver_posted_interrupt(struct kvm_vcpu *vcpu, int vector)
 
 这里主要是设置`vmx->pi_desc`中的位图即`struct pi_desc`中的**pir字段**，其是一个**32位的数组**，共**8项**。因此最大标记**256个中断**，**每个中断向量**对应一位。
 
-设置好后，请求`KVM_REQ_EVENT`事件，在**下次vm-entry**的时候会进行**中断注入**。
 
 ```cpp
 static inline bool kvm_vcpu_trigger_posted_interrupt(struct kvm_vcpu *vcpu,
@@ -1397,6 +1398,20 @@ static inline bool kvm_vcpu_trigger_posted_interrupt(struct kvm_vcpu *vcpu,
         }
 #endif
         return false;
+}
+```
+
+设置好后，请求`KVM_REQ_EVENT`事件，在**下次vm-entry**的时候会进行**中断注入**。
+
+```cpp
+static inline void kvm_make_request(int req, struct kvm_vcpu *vcpu)
+{
+        /*
+         * Ensure the rest of the request is published to kvm_check_request's
+         * caller.  Paired with the smp_mb__after_atomic in kvm_check_request.
+         */
+        smp_wmb();
+        set_bit(req & KVM_REQUEST_MASK, (void *)&vcpu->requests);
 }
 ```
 
