--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -937,6 +937,7 @@ static int ioapic_set_irq(struct kvm_ioapic *ioapic, unsigned int irq,
          * interrupts lead to time drift in Windows guests.  So we track
          * EOI manually for the RTC interrupt.
          */
+        // RTC
         if (irq == RTC_GSI && line_status &&
                 rtc_irq_check_coalesced(ioapic)) {
                 ret = 0;
