--- a/Linux/Memory/系统学习/内存管理全教程(必看)/01-description/04-page/4. 内存描述之内存页面page.md
+++ b/Linux/Memory/系统学习/内存管理全教程(必看)/01-description/04-page/4. 内存描述之内存页面page.md
@@ -1,19 +1,24 @@
-[TOC]
 
-- 1 前景回顾
-    - 1.1 UMA和NUMA两种模型
-    - 1.2 (N)UMA模型中linux内存的机构
-    - 1.3 Linux如何描述物理内存
-    - 1.4 今日内容(页帧struct page)
-- 2 页帧
-    - 2.1 struct page结构
-    - 2.2 mapping & index
-    - 2.3 private私有数据指针
-    - 2.4 lru链表头
-- 3 体系结构无关的页面的状态flags
-    - 3.1 页面到管理区和节点的映射
-    - 3.2 内存页标识pageflags
-- 4 全局页面数组mem\_map
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1 前景回顾](#1-前景回顾)
+  - [1.1 UMA和NUMA两种模型](#11-uma和numa两种模型)
+  - [1.2 (N)UMA模型中linux内存的机构](#12-numa模型中linux内存的机构)
+  - [1.3 Linux如何描述物理内存](#13-linux如何描述物理内存)
+  - [1.4 今日内容(页帧struct page)](#14-今日内容页帧struct-page)
+- [2 页帧](#2-页帧)
+  - [2.1 struct page结构](#21-struct-page结构)
+  - [2.2 mapping & index](#22-mapping-index)
+  - [2.3 private私有数据指针](#23-private私有数据指针)
+  - [2.4 lru链表头](#24-lru链表头)
+- [3 体系结构无关的页面的状态flags](#3-体系结构无关的页面的状态flags)
+  - [3.1 页面到管理区和节点的映射](#31-页面到管理区和节点的映射)
+  - [3.2 内存页标识pageflags](#32-内存页标识pageflags)
+- [4 全局页面数组mem\_map](#4-全局页面数组mem_map)
+
+<!-- /code_chunk_output -->
 
 # 1 前景回顾
 
