--- Auto-Git Commit ---

--- a/Virtualization/KVM/2. 模块初始化/1. 数据结构.md
+++ b/Virtualization/KVM/2. 模块初始化/1. 数据结构.md
@@ -3,11 +3,11 @@
 
 <!-- code_chunk_output -->
 
-- [struct kvm_x86_ops: x86的架构相关函数](#struct-kvm_x86_ops-x86的架构相关函数)
+- [1. struct kvm_x86_ops: x86的架构相关函数](#1-struct-kvm_x86_ops-x86的架构相关函数)
 
 <!-- /code_chunk_output -->
 
-# struct kvm_x86_ops: x86的架构相关函数
+# 1. struct kvm_x86_ops: x86的架构相关函数
 
 vmx.c定义了**vmx的架构下的操作函数**`vmx_x86_ops`, svm也有自己的定义
 
