--- Auto-Git Commit ---

--- a/Tools/Visual Studio Code/安装配置.md
+++ b/Tools/Visual Studio Code/安装配置.md
@@ -25,7 +25,7 @@
   - [4.4. pangu](#44-pangu)
     - [4.4.1. 命令行工具](#441-命令行工具)
     - [4.4.2. 配置](#442-配置)
-- [5. Auto\-Git](#5-auto-git)
+- [5. Auto-Git](#5-auto-git)
 - [6. Settings Sync](#6-settings-sync)
   - [6.1. 设置 (新建)token](#61-设置-新建token)
   - [6.2. 设置 Gist ID](#62-设置-gist-id)
@@ -40,7 +40,6 @@
   - [8.1. C/C\+\+ 调试](#81-cc-调试)
 - [9. SFTP](#9-sftp)
 - [10. 最终的配置](#10-最终的配置)
-- [11. 参考](#11-参考)
 
 <!-- /code_chunk_output -->
 
@@ -239,7 +238,7 @@ https://github.com/halfcrazy/vscode-pangu
 }
 ```
 
-# 5. Auto\-Git
+# 5. Auto-Git
 
 用于自动同步笔记, 注意, 这个不要用于其他项目, 这也是为什么我没有列在上面
 
@@ -291,7 +290,7 @@ Gist 可以保存上传的配置文件。拉取配置文件需要配置两个 id
 
 ![config](./images/3.png)
 
-![config](./images/4.png)
+![2020-05-29-19-28-07.png](./images/2020-05-29-19-28-07.png)
 
 ![config](./images/7.png)
 
@@ -301,7 +300,7 @@ Gist 可以保存上传的配置文件。拉取配置文件需要配置两个 id
 
 gist ID 也可以从 gist.github.com 获得, 如图:
 
-![config](./images/6.png)
+![2020-05-29-19-26-14.png](./images/2020-05-29-19-26-14.png)
 
 ## 6.3. 设置
 
@@ -349,7 +348,7 @@ $HOME/Library/Application Support/Code/User/syncLocalSettings.json, 通过 "CMD+
     "ignoreExtensions": [],
     "gistDescription": "Visual Studio Code Settings Sync Gist",
     "version": 328,
-    "token": "ec22232ce57cef42c6c00ba18029e88b6e4e9301",
+    "token": "ec22232ce579301",
     "downloadPublicGist": false,
     "supportedFileExtensions": [
         "json",
@@ -439,10 +438,10 @@ gist ID 很关键, 用于在其他电脑同步下载, 所以不能忘记
 
 打开 "首选项" "设置"
 
-```dict
+```json
 {
     "editor.fontFamily": "SauceCodePro Nerd Font Mono, -apple-system",
-    "editor.fontSize": 14,
+    "editor.fontSize": 15,
     "editor.wordWrap": "on",
     "breadcrumbs.enabled": true,
     "extensions.autoUpdate": false,
@@ -450,16 +449,15 @@ gist ID 很关键, 用于在其他电脑同步下载, 所以不能忘记
     "telemetry.enableCrashReporter": false,
     "html.autoClosingTags": false,
     "markdown.preview.fontFamily": "SauceCodePro Nerd Font Mono, BlinkMacSystemFont, 'Segoe WPC', 'Segoe UI', 'Ubuntu', 'Droid Sans', sans-serif",
-    "files.autoSave": "afterDelay",
+    "markdown.preview.fontSize": 15,
     "workbench.activityBar.visible": true,
     "workbench.statusBar.visible": true,
     "workbench.colorTheme": "One Dark Pro",
-    "sync.gist": "c6092de85c1b5fbdc834800397f1c4aa",
+    "sync.gist": "55599d7d83447627c58d50495d9dd951",
     "sync.autoDownload": false,
-    "sync.autoUpload": false,
+    "sync.autoUpload": true,
     "sync.forceDownload": false,
     "sync.quietSync": false,
-    "sync.askGistName": false,
     "sync.removeExtensions": true,
     "sync.syncExtensions": true,
     "markdown-preview-enhanced.imageFolderPath": "./images",
@@ -469,18 +467,23 @@ gist ID 很关键, 用于在其他电脑同步下载, 所以不能忘记
     "pasteImage.forceUnixStyleSeparator": true,
     "pasteImage.prefix": "./",
     "pasteImage.insertPattern": "![${imageFileName}](${imageFilePath}${imageSyntaxSuffix}",
-    "window.zoomLevel": 0,
     "update.enableWindowsBackgroundUpdates": false,
     "update.showReleaseNotes": false,
     "update.mode": "manual",
     "workbench.startupEditor": "welcomePage",
     "workbench.iconTheme": "vscode-icons",
     "vsicons.dontShowNewVersionMessage": true,
+    "git.alwaysShowStagedChangesResourceGroup": true,
     "pangu.auto_space_on_save": false,
-    "git.alwaysShowStagedChangesResourceGroup": true
+    "vim.normalModeKeyBindingsNonRecursive": [
+        {
+            "before": ["<c-j>"],
+            "after": ["o", "<esc>"]
+        }
+    ],
+    "files.autoSave": "afterDelay",
+    "window.zoomLevel": 0,
+    "oneDarkPro.editorTheme": "panda",
+    "git.confirmSync": false
 }
 ```
-
-# 11. 参考
-
-- Visual Studio Code 如何编写运行 C、C++ 程序？: https://www.zhihu.com/question/30315894
