--- Auto-Git Commit ---

--- a/Linux/Algorithm/DataStructure/Linked List/简单链表.md
+++ b/Linux/Algorithm/DataStructure/Linked List/简单链表.md
@@ -3,27 +3,27 @@
 
 <!-- code_chunk_output -->
 
-* [一、链表数据结构简介](#一-链表数据结构简介)
-	* [1 单链表](#1-单链表)
-	* [2 双链表](#2-双链表)
-	* [3 循环链表](#3-循环链表)
-* [二、Linux内核链表数据结构的实现](#二-linux内核链表数据结构的实现)
-	* [1 链表结构定义](#1-链表结构定义)
-	* [2 初始化链表](#2-初始化链表)
-	* [3 插入结点](#3-插入结点)
-	* [4 删除结点](#4-删除结点)
-	* [5 移动结点](#5-移动结点)
-	* [6 判断链表](#6-判断链表)
-	* [7 合并链表](#7-合并链表)
-	* [8 遍历](#8-遍历)
-		* [a)	由链表节点到数据项变量](#a由链表节点到数据项变量)
-		* [b)	遍历宏](#b遍历宏)
-* [三、实践](#三-实践)
-* [四、扩展](#四-扩展)
-	* [1 hlist](#1-hlist)
-	* [2 read-copy update](#2-read-copy-update)
-* [五、总结](#五-总结)
-* [六、参考](#六-参考)
+- [一、链表数据结构简介](#一-链表数据结构简介)
+  - [1 单链表](#1-单链表)
+  - [2 双链表](#2-双链表)
+  - [3 循环链表](#3-循环链表)
+- [二、Linux内核链表数据结构的实现](#二-linux内核链表数据结构的实现)
+  - [1 链表结构定义](#1-链表结构定义)
+  - [2 初始化链表](#2-初始化链表)
+  - [3 插入结点](#3-插入结点)
+  - [4 删除结点](#4-删除结点)
+  - [5 移动结点](#5-移动结点)
+  - [6 判断链表](#6-判断链表)
+  - [7 合并链表](#7-合并链表)
+  - [8 遍历](#8-遍历)
+    - [a)	由链表节点到数据项变量](#a由链表节点到数据项变量)
+    - [b)	遍历宏](#b遍历宏)
+- [三、实践](#三-实践)
+- [四、扩展](#四-扩展)
+  - [1 hlist](#1-hlist)
+  - [2 read-copy update](#2-read-copy-update)
+- [五、总结](#五-总结)
+- [六、参考](#六-参考)
 
 <!-- /code_chunk_output -->
 
@@ -146,7 +146,7 @@ struct list_head student_list= { &(student_list), &(student_list) };
 
 ```cpp
 struct list_head student_list；
-INIT_LIST_HEAD (&student_list);
+INIT_LIST_HEAD(&student_list);
 ```
 
 那么在写代码时，如果是通过kmalloc之类的函数动态创建节点，我们就可以用下面代码对链表节点进行初始化：
@@ -466,7 +466,7 @@ typedef struct student
 #endif
 ```
 
-源文件student.c长相：
+源文件student.c：
 
 ```cpp
 #include <linux/module.h>
