--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -455,7 +455,7 @@ libcalc.a: current ar archive
 
 是的，我们不需要。因为**标准库已经是标准**了，所以会**被默认链接**。
 
-不过因为**数学函数库libm.a没有默认链接**，所以我们**使用了数学函数的代码**在**编译**时需要在命令行指定 `-lm` 链接（`-l`是**制定链接库**，`m`是**去掉lib之后的库名**），不过现在**好多gcc**都**默认链接libm.c库**了，比如我机子上的gcc 4.6.3会默认链接的。
+不过因为**数学函数库libm.a没有默认链接**，所以我们**使用了数学函数的代码**在**编译**时需要在命令行指定 `-lm` 链接（`-l`是**指定链接库**，`m`是**去掉lib之后的库名**），不过现在**好多gcc**都**默认链接libm.c库**了，比如我机子上的gcc 4.6.3会默认链接的。
 
 #### 5.2.4.2. 静态库的缺点
 
