--- Auto-Git Commit ---

--- a/Linux/Tools/Sysbench/使用.md
+++ b/Linux/Tools/Sysbench/使用.md
@@ -44,8 +44,10 @@ https://github.com/akopytov/sysbench
 
 ```
 yum -y install make automake libtool pkgconfig libaio-devel
+
 # For MySQL support, replace with mysql-devel on RHEL/CentOS 5
 yum -y install mariadb-devel openssl-devel
+
 # For PostgreSQL support
 yum -y install postgresql-devel
 ```
@@ -75,7 +77,7 @@ source /root/.bashrc
 
 # 3. 使用
 
-执行sysbench \–help，可以看到sysbench的详细使用方法。
+执行`sysbench –help`，可以看到sysbench的详细使用方法。
 
 ```
 [root@gerry ~]# sysbench --help
