--- Auto-Git Commit ---

--- a/Linux/Tools/Sysbench/使用.md
+++ b/Linux/Tools/Sysbench/使用.md
@@ -20,6 +20,7 @@
   - [3.10. sysbench threads help](#310-sysbench-threads-help)
   - [3.11. sysbench mutex help](#311-sysbench-mutex-help)
 - [4. sysbench使用举例](#4-sysbench使用举例)
+- [参考](#参考)
 
 <!-- /code_chunk_output -->
 
@@ -170,8 +171,7 @@ See 'sysbench <testname> help' for a list of options for each test.
 - memory - Memory functions speed test（内存访问）
 - threads - Threads subsystem performance test基于线程的调度性能）
 - mutex - Mutex performance test
-
-oltp\_\*.lua: a collection of OLTP-like database benchmarks （OLTP数据库 如MySQL、Oracle、PostgreSQL）
+- `oltp_*.lua`: a collection of OLTP-like database benchmarks （OLTP数据库, 在西安事务处理, 如MySQL、Oracle、PostgreSQL）
 
 ```
 sysbench [options]... [testname] [command] 
@@ -371,3 +371,7 @@ mutex options:
 ```
 # sysbench ./tests/include/oltp_legacy/oltp.lua --mysql-host=192.168.10.10 --mysql-port=3306 --mysql-user=root --mysql-password=123456 cleanup
 ```
+
+# 参考
+
+http://ghoulich.xninja.org/2016/05/11/sysbench-manual/
