--- a/Virtualization/Tools/Test/虚拟机物理机性能对比.md
+++ b/Virtualization/Tools/Test/虚拟机物理机性能对比.md
@@ -82,7 +82,7 @@ always madvise [never]
 
 ```
 # cat /proc/cmdline
-BOOT_IMAGE=/boot/vmlinuz-3.10.0-693_59.tl2 root=/dev/sda1 ro console=tty0 vconsole.keymap=us vconsole.font=latarcyrheb-sun16 i8042.noaux net.ifnames=0 biosdevname=0 intel_idle.max_cstate=1 intel_pstate=disable cgroup_disable=memory crashkernel=768M LANG=C hugepagesz=1G default_hugepagesz=1G hugepages=346
+BOOT_IMAGE=/boot/vmlinuz-3.10.0-693_59 root=/dev/sda1 ro console=tty0 vconsole.keymap=us vconsole.font=latarcyrheb-sun16 i8042.noaux net.ifnames=0 biosdevname=0 intel_idle.max_cstate=1 intel_pstate=disable cgroup_disable=memory crashkernel=768M LANG=C hugepagesz=1G default_hugepagesz=1G hugepages=346
 ```
 
 ## 2.3. 下发子机并确认
@@ -90,86 +90,7 @@ BOOT_IMAGE=/boot/vmlinuz-3.10.0-693_59.tl2 root=/dev/sda1 ro console=tty0 vconso
 确认物理机资源, 下发子机, 参数如下
 
 ```
-{
-  "params": {
-    "content": {
-      "requestInfo": {
-        "caller": "des",
-        "operator": "des",
-        "requestId": "145829440815388",
-        "requestKey": "mx_ksdionuj3djfk",
-        "requestModule": "qcloud",
-        "seqId": "14582944072796"
-      },
-      "requestItem": {
-        "data": {
-          "affinity": 1,
-          "agentList": {
-            "monitor": 1,
-            "security": 1
-          },
-          "alarmLevel": "L3",
-          "appId": "251008809",
-          "uin":3432146168,
-          "hostIpList": [
-            "9.32.175.116"
-          ],
-          "vpcId": 76768,
-      "vpcSubnetId":1292256,
-          "bg": "qcloud",
-          "bkOperator": "gerryhwli",
-          "business1": "[N][腾讯云云平台产品质量其它]",
-          "business2": "[合作机房子机][测试子机]",
-          "business3": "[公共][测试]",
-          "businessId": "356693",
-          "cacheImage": 0,
-          "caller": "des",
-          "hypervisor": "kvm",
-          "cbsModule": 0,
-          "cbsShortTermFlag": 0,
-          "cbsSnapshot": 0,
-          "cpu": 40,
-          "cpuMode": "host-passthrough",
-          "department": "互联网业务系统",
-          "deptId": 10,
-          "eventId": 12319830,
-          "expired": 1800,
-          "group": "SNS-game运维组",
-          "groupId": 343,
-          "lanIp": 1,
-          "maxCount": 1,
-          "mem": 307200,
-          "optionalInfo": {
-            "passwd": "isd@cloud",
-            "username": "root"
-          },
-          "priOperator": "gerryhwli",
-          "requestId": "145829440715388",
-          "seqId": "14582944072796",
-          "serverStatusId": 17,
-          "type": "VSELF_4",
-          "vmmRandom": 0,
-          "cloudinit": "support",
-          "volume": [
-            {
-              "custom": 1,
-              "osName": "centos7.2x86_64",
-              "partitionType": "ROOT",
-              "rawRootTag": "rawRootDisk",
-              "size": 50,
-              "target": "xvda",
-              "type": "standard"
-            }
-          ],
-          "pinType": 3
-        },
-        "method": "instance_launch"
-      },
-      "type": "Json",
-      "version": "1.0"
-    }
-  }
-}
+
 ```
 
 在服务器上查看子机, 确认使用的root盘, 将kernel、SPECjbb、.config文件拷贝到子机镜像中
@@ -207,7 +128,7 @@ BOOT_IMAGE=/boot/vmlinuz-3.10.0-693_59.tl2 root=/dev/sda1 ro console=tty0 vconso
 
 ```
 # cat /proc/cmdline
-BOOT_IMAGE=/boot/vmlinuz-5.3.0-693_44.tl2+ root=/dev/vda1 ro crashkernel=auto console=ttyS0 console=tty0 panic=5 net.ifnames=0 biosdevname=0 LANG=en_US.utf8 hugepagesz=1G default_hugepagesz=1G hugepages=346
+BOOT_IMAGE=/boot/vmlinuz-5.3.0-693_44 root=/dev/vda1 ro crashkernel=auto console=ttyS0 console=tty0 panic=5 net.ifnames=0 biosdevname=0 LANG=en_US.utf8 hugepagesz=1G default_hugepagesz=1G hugepages=346
 ```
 
 ## 2.5. 设置虚拟机并测试
@@ -238,24 +159,24 @@ echo 0 > /sys/devices/system/cpu/cpu1/online
 
 ```
 # uname -r
-5.3.0-693_44.tl2+
+5.3.0-693_44
 
 # cat /etc/redhat-release
 CentOS Linux release 7.2 (Final)
 
 # hostinfo
               ip : 9.32.175.116
-        deviceId : 403036209
-            type : Y0-MS42-25G
-          zoneId : 100003
+        deviceId : 403009
+            type : 
+          zoneId : 100
          appMask : 1
          cbsFlag : 1
          netCard : 2
-          osName : Linux-3.10.0-693_40.tl2-x86_64-with-centos-7.2-Final
-   kernelVersion : 3.10.0-693_40.tl2
+          osName : Linux-3.10.0-693_40-x86_64-with-centos-7.2-Final
+   kernelVersion : 3.10.0-693_40
     cpuModelName : Intel(R) Xeon(R) Gold 6148 CPU @ 2.40GHz
         cpuModel : Skylake
-     innerSwitch : GZ-HXY-G160301-N04-H6820HF-LA25G-01
+     innerSwitch : 01
       netVersion : 3
    netCardStruct : 2
         soldPool : plain
@@ -296,7 +217,7 @@ NUMA node0 CPU(s):     0,2,4,6,8,10,12,14,16,18,20,22,24,26,28,30,32,34,36,38,40
 NUMA node1 CPU(s):     1,3,5,7,9,11,13,15,17,19,21,23,25,27,29,31,33,35,37,39,41,43,45,47,49,51,53,55,57,59,61,63,65,67,69,71,73,75,77,79
 
 # cat /proc/cmdline
-BOOT_IMAGE=/boot/vmlinuz-3.10.0-693_59.tl2 root=/dev/sda1 ro console=tty0 vconsole.keymap=us vconsole.font=latarcyrheb-sun16 i8042.noaux net.ifnames=0 biosdevname=0 intel_idle.max_cstate=1 intel_pstate=disable cgroup_disable=memory crashkernel=768M LANG=C hugepagesz=1G default_hugepagesz=1G hugepages=346
+BOOT_IMAGE=/boot/vmlinuz-3.10.0-693_59 root=/dev/sda1 ro console=tty0 vconsole.keymap=us vconsole.font=latarcyrheb-sun16 i8042.noaux net.ifnames=0 biosdevname=0 intel_idle.max_cstate=1 intel_pstate=disable cgroup_disable=memory crashkernel=768M LANG=C hugepagesz=1G default_hugepagesz=1G hugepages=346
 
 # cat /proc/meminfo
 MemTotal:       393848400 kB
@@ -363,21 +284,12 @@ DirectMap1G:    393216000 kB
   Process: 16143 ExecStart=/usr/libexec/ksmctl start (code=exited, status=0/SUCCESS)
  Main PID: 16143 (code=exited, status=0/SUCCESS)
 
-Nov 15 15:57:15 kvm_9_32_175_116 systemd[1]: Starting Kernel Samepage Merging...
-Nov 15 15:57:15 kvm_9_32_175_116 systemd[1]: Started Kernel Samepage Merging.
-Nov 15 16:20:25 kvm_9_32_175_116 systemd[1]: Stopping Kernel Samepage Merging...
-Nov 15 16:20:25 kvm_9_32_175_116 systemd[1]: Stopped Kernel Samepage Merging.
-
 ● ksmtuned.service - Kernel Samepage Merging (KSM) Tuning Daemon
    Loaded: loaded (/usr/lib/systemd/system/ksmtuned.service; enabled; vendor preset: enabled)
    Active: inactive (dead) since Fri 2019-11-15 16:20:25 CST; 48min ago
   Process: 16294 ExecStart=/usr/sbin/ksmtuned (code=exited, status=0/SUCCESS)
  Main PID: 16311 (code=killed, signal=TERM)
 
-Nov 15 15:57:15 kvm_9_32_175_116 systemd[1]: Starting Kernel Samepage Merging (KSM) Tuning Daemon...
-Nov 15 15:57:15 kvm_9_32_175_116 systemd[1]: Started Kernel Samepage Merging (KSM) Tuning Daemon.
-Nov 15 16:20:25 kvm_9_32_175_116 systemd[1]: Stopping Kernel Samepage Merging (KSM) Tuning Daemon...
-Nov 15 16:20:25 kvm_9_32_175_116 systemd[1]: Stopped Kernel Samepage Merging (KSM) Tuning Daemon.
 
 # cat /sys/kernel/mm/transparent_hugepage/enabled
 always madvise [never]
@@ -391,7 +303,7 @@ qemu-kvm-2.6.0_64-K4Q.x86_64
 
 ```
 # uname -r
-5.3.0-693_44.tl2+
+5.3.0-693_44
 
 # cat /etc/redhat-release
 CentOS Linux release 7.2.1511 (Core)
@@ -423,7 +335,7 @@ NUMA node0 CPU(s):     0-39
 Flags:                 fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush mmx fxsr sse sse2 ss ht syscall nx pdpe1gb rdtscp lm constant_tsc arch_perfmon rep_good nopl cpuid tsc_known_freq pni pclmulqdq vmx ssse3 fma cx16 pcid sse4_1 sse4_2 x2apic movbe popcnt tsc_deadline_timer aes xsave avx f16c rdrand hypervisor lahf_lm abm 3dnowprefetch topoext cpuid_fault invpcid_single pti tpr_shadow vnmi flexpriority ept vpid ept_ad fsgsbase tsc_adjust bmi1 hle avx2 smep bmi2 erms invpcid rtm mpx avx512f avx512dq rdseed adx smap clflushopt clwb avx512cd avx512bw avx512vl xsaveopt xsavec xgetbv1 xsaves arat pku ospke
 
 # cat /proc/cmdline
-BOOT_IMAGE=/boot/vmlinuz-5.3.0-693_44.tl2+ root=/dev/vda1 ro crashkernel=auto console=ttyS0 console=tty0 panic=5 net.ifnames=0 biosdevname=0 LANG=en_US.utf8 hugepagesz=1G default_hugepagesz=1G hugepages=346
+BOOT_IMAGE=/boot/vmlinuz-5.3.0-693_44 root=/dev/vda1 ro crashkernel=auto console=ttyS0 console=tty0 panic=5 net.ifnames=0 biosdevname=0 LANG=en_US.utf8 hugepagesz=1G default_hugepagesz=1G hugepages=346
 
 # cat /proc/meminfo
 MemTotal:       309359556 kB
