--- Auto-Git Commit ---

--- a/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -33,6 +33,8 @@
 
 由于APIC Timer设备实际就是**lapic**的一个**功能**，所以在创建lapic设备同时，也就辅助设置了。
 
+不存在qemu侧流程
+
 ```cpp
 int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
 {
