--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -49,7 +49,9 @@
 
 在正常系统中:
 
-中断控制器目前主要有**APIC**，这种架构下**设备控制器**通过**某种触发方式**通知**IO APIC**，**IO APIC**根据**自身维护**的**重定向表pci irq routing table**格式化出**一条中断消息**，把中断消息发送给**local APIC**，local APIC局部于CPU，即**每个CPU一个**，local APIC 具备**传统中断控制器的相关功能**以及各个寄存器，中断请求寄存器IRR，中断屏蔽寄存器IMR，中断服务寄存器ISR等.
+中断控制器目前主要有**APIC**，这种架构下**设备控制器**通过**某种触发方式**通知**IO APIC**，**IO APIC**根据**自身维护**的**重定向表pci irq routing table**格式化出**一条中断消息**，把中断消息发送给**local APIC**.
+
+local APIC局部于CPU，即**每个CPU一个**，local APIC 具备**传统中断控制器的相关功能**以及各个寄存器，中断请求寄存器IRR，中断屏蔽寄存器IMR，中断服务寄存器ISR等.
 
 针对这些关键部件的虚拟化是中断虚拟化的重点。
 
@@ -79,10 +81,6 @@
 所以在**qemu**中也会创建**i8259A**和**ioapic**
 
 ## 4.1. LAPIC的创建
-
-由于**APIC Timer设备**实际就是**lapic的一个功能**，所以在创建lapic设备同时，也就辅助设置了。
-
-不存在qemu侧流程
 
 ### 4.1.1. 整体流程
 
