--- Auto-Git Commit ---

--- a/Virtualization/QEMU/5. IO虚拟化/4. Interrupt/2. 中断控制器.md
+++ b/Virtualization/QEMU/5. IO虚拟化/4. Interrupt/2. 中断控制器.md
@@ -1,4 +1,18 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [中断控制器的创建和初始化](#中断控制器的创建和初始化)
+  - [中断控制器的创建](#中断控制器的创建)
+  - [用户态和内核态的中断关联](#用户态和内核态的中断关联)
+  - [中断路由](#中断路由)
+  - [中断路由表](#中断路由表)
+  - [中断路由项](#中断路由项)
+- [参考](#参考)
+
+<!-- /code_chunk_output -->
+
 中断虚拟化的关键在于对中断控制器的模拟，我们知道x86上中断控制器主要有旧的中断控制器PIC(intel 8259a)和适应于SMP框架的IOAPIC/LAPIC两种。
 
 # 中断控制器的创建和初始化
