--- a/Virtualization/QEMU/5. IO虚拟化/4. Interrupt/5. 纯模拟.md
+++ b/Virtualization/QEMU/5. IO虚拟化/4. Interrupt/5. 纯模拟.md
@@ -115,6 +115,8 @@ static int kvm_main_loop_cpu(CPUState *env)
     return 0;
 }
 如果中断控制器不是内核空间模拟（用户空间模拟），进行中断注入。
+
+```cpp
 kvm_main_loop_cpu-->kvm_cpu_exec-->kvm_run
 int kvm_run(CPUState *env)
 {
@@ -124,7 +126,7 @@ int kvm_run(CPUState *env)
         run->request_interrupt_window = kvm_arch_try_push_interrupts(env);
 #endif
 }
-
+```
 1.首先满足三个条件
 1）内核kvm准备好了接受中断注入
 2）有中断请求并且为硬件中断请求
