--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -697,10 +697,10 @@ int kvm_set_routing_entry(struct kvm *kvm,
 
 ```cpp
 kvm_set_irq()  // 中断触发入口
- ├─ kvm_irq_map_gsi()  // 获取同一个irq注册的所有中断路由项
+ ├─ kvm_irq_map_gsi()  // 获取同一个irq注册的所有中断路由项(即设备)
  ├─ while() {  // 遍历中断路由项
  ├─ irq_set[i].set()  // 调用对应路由实体的触发函数 
- └─ } // 遍历得到的中断路由项
+ └─ } // 
 ```
 
 ## 5.2. 中断触发入口
