--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -821,7 +821,7 @@ kvm_set_pic_irq()  // pic的中断触发入口
 #### 5.4.1.2. pic的触发入口
 
 ```cpp
-// arch/x86/
+// arch/x86/kvm/irq_comm.c
 static int kvm_set_pic_irq(struct kvm_kernel_irq_routing_entry *e,
                            struct kvm *kvm, int irq_source_id, int level,
                            bool line_status)
@@ -829,11 +829,61 @@ static int kvm_set_pic_irq(struct kvm_kernel_irq_routing_entry *e,
         struct kvm_pic *pic = kvm->arch.vpic;
         return kvm_pic_set_irq(pic, e->irqchip.pin, irq_source_id, level);
 }
+
+int kvm_pic_set_irq(struct kvm_pic *s, int irq, int irq_source_id, int level)
+{
+        int ret, irq_level;
+
+        BUG_ON(irq < 0 || irq >= PIC_NUM_PINS);
+
+        pic_lock(s);
+        // 触发电平
+        irq_level = __kvm_irq_line_state(&s->irq_states[irq],
+                                         irq_source_id, level);
+        ret = pic_set_irq1(&s->pics[irq >> 3], irq & 7, irq_level);
+        pic_update_irq(s);
+        trace_kvm_pic_set_irq(irq >> 3, irq & 7, s->pics[irq >> 3].elcr,
+                              s->pics[irq >> 3].imr, ret == 0);
+        pic_unlock(s);
+
+        return ret;
+}
 ```
 
 对于PIC来说, 它主要是设置kvm里面的**虚拟中断控制器结构体**`struct kvm_pic`完成**虚拟中断控制器的设置**。
 
 如果是**边缘触发**，需要**触发电平先1再0**，完成一个正常的中断模拟。
+
+```cpp
+/*
+ * set irq level. If an edge is detected, then the IRR is set to 1
+ */
+static inline int pic_set_irq1(struct kvm_kpic_state *s, int irq, int level)
+{
+        int mask, ret = 1;
+        mask = 1 << irq;
+        if (s->elcr & mask)     /* level triggered */
+                if (level) {
+                        ret = !(s->irr & mask);
+                        s->irr |= mask;
+                        s->last_irr |= mask;
+                } else {
+                        s->irr &= ~mask;
+                        s->last_irr &= ~mask;
+                }
+        else    /* edge triggered */
+                if (level) {
+                        if ((s->last_irr & mask) == 0) {
+                                ret = !(s->irr & mask);
+                                s->irr |= mask;
+                        }
+                        s->last_irr |= mask;
+                } else
+                        s->last_irr &= ~mask;
+
+        return (s->imr & mask) ? -1 : ret;
+}
+```
 
 ### 5.4.2. IOAPIC中断触发: kvm_set_ioapic_irq()
 
