--- Auto-Git Commit ---

--- a/Architecture/x86/4. x86中断与异常.md
+++ b/Architecture/x86/4. x86中断与异常.md
@@ -151,10 +151,12 @@ APIC系统中, 中断的发起大致流程如下.
 
 ### 1.6.2. 中断触发方式
 
-这里需要额外说明一下，中断的触发方式分为level触发和edge触发；
+中断触发方式分为电平触发和边沿触发，level触发和edge触发；
 
 - **level触发**就是一直将**引脚**保持在**高电平**（电平为**1**）直到**中断完成**，现在**PCI/PCIE设备**都是**level触发**；
 - **edge**就是通过**一个电平边缘跳变**来触发的中断, 电平**从0到1**，或者**从1到0**，原来的**ISA设备**都是**edge触发**，在**kvm**中通过发送**level = 0**和**level = 1**的两个中断来**模拟一个edge中断**。
+
+**isa设备**大多数采用**边沿触发**，**pci设备**采用**电平触发**。
 
 ### 1.6.3. IRQ、GSI和中断向量
 
