--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -225,6 +225,7 @@ struct kvm_kpic_state {
         u8 rotate_on_auto_eoi;
         u8 special_fully_nested_mode;
         u8 init4;               /* true if 4 byte init */
+        // 标识 边沿触发/水平触发 ??
         u8 elcr;                /* PIIX edge/trigger selection */
         u8 elcr_mask;
         u8 isr_ack;     /* interrupt ack detection */
