--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -864,7 +864,9 @@ static inline int pic_set_irq1(struct kvm_kpic_state *s, int irq, int level)
 {
         int mask, ret = 1;
         mask = 1 << irq;
+        // 水平触发
         if (s->elcr & mask)     /* level triggered */
+                // 高电平
                 if (level) {
                         ret = !(s->irr & mask);
                         s->irr |= mask;
@@ -873,13 +875,16 @@ static inline int pic_set_irq1(struct kvm_kpic_state *s, int irq, int level)
                         s->irr &= ~mask;
                         s->last_irr &= ~mask;
                 }
+        // 边沿触发
         else    /* edge triggered */
+                // 高
                 if (level) {
                         if ((s->last_irr & mask) == 0) {
                                 ret = !(s->irr & mask);
                                 s->irr |= mask;
                         }
                         s->last_irr |= mask;
+                // 低
                 } else
                         s->last_irr &= ~mask;
 
