--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -876,6 +876,8 @@ static inline int pic_set_irq1(struct kvm_kpic_state *s, int irq, int level)
 }
 ```
 
+所以不会走向lapic.
+
 ### 5.4.2. IOAPIC中断触发: kvm_set_ioapic_irq()
 
 #### 5.4.2.1. 整体流程
@@ -1181,8 +1183,7 @@ int kvm_apic_set_irq(struct kvm_vcpu *vcpu, struct kvm_lapic_irq *irq,
 }
 ```
 
-具体需要调用`kvm_apic_set_irq`函数，继而调用`__apic_accept_irq`, 让lapic接收中断
-
+具体需要调用`kvm_apic_set_irq`函数，继而调用`__apic_accept_irq`, 让lapic接收中断, 这个的分析见后面.
 
 ### 5.4.3. MSI中断触发函数: kvm_set_msi()
 
