--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -682,23 +682,11 @@ int kvm_set_routing_entry(struct kvm *kvm,
 }
 ```
 
-
-
-
-
-
-
-
 # 5. 中断触发: kvm_set_irq()
 
-中断注入有个一个标志性的函数 `kvm_set_irq()`，这个是**中断注入的最开始**。
+中断注入需要处理两个问题，什么时候注入，如何注入？
 
-
-函数参数：struct kvm *kvm，发生中断的客户机的结构体指针，我们知道在KVM模块中有个vm_list，链接了所有注册的虚拟机，当多次使用QEMU命令以后会产生多个虚拟机，不同虚拟机中公用一个KVM模块，通过这个kvm结构体来辨识是哪个虚拟机，当然每个虚拟机里面可以对应多个VCPU，别把这个概念弄混淆了；irq_source_id中断资源ID，对于KVM设备我们都会申请一个中断资源ID，注册KVM IO设备时申请的；irq中断请求号，这个是转化GSI之前的，比如时钟是0号，这里就是0，而不是32；level表示中断的高低电平；line_status暂不清楚含义。
-
-
-
-
+有个一个标志性的函数 `kvm_set_irq()`，这个是**中断注入的最开始**。
 
 ## 5.1. 整体流程
 
@@ -756,7 +744,7 @@ int kvm_set_irq(struct kvm *kvm, int irq_source_id, u32 irq, int level,
 各个参数的意思:
 
 - **kvm**指定特定的虚拟机
-- `irq_source_id`是**中断源ID**，一般有`KVM_USERSPACE_IRQ_SOURCE_ID`和`KVM_IRQFD_RESAMPLE_IRQ_SOURCE_ID`, 一般在注册KVM IO设备时申请的
+- `irq_source_id`是**中断源ID**，一般有`KVM_USERSPACE_IRQ_SOURCE_ID`和`KVM_IRQFD_RESAMPLE_IRQ_SOURCE_ID`, 对于KVM设备我们都会申请一个中断资源ID，一般在注册KVM IO设备时申请的
 - **irq**是**全局的中断号**，这个是转化GSI之前的，比如时钟是0号，这里就是0，而不是32
 - **level**指定**高低电平**，需要注意的是，针对**边沿触发**，需要**两个电平触发来模拟**，**先高电平再低电平**。
 
