--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -1107,7 +1107,7 @@ int kvm_irq_delivery_to_apic(struct kvm *kvm, struct kvm_lapic *src,
         kvm_for_each_vcpu(i, vcpu, kvm) {
                 if (!kvm_apic_present(vcpu))
                         continue;
-                // 根据dest_id
+                // 判断当前vcpu是否符合, 不符合跳过
                 if (!kvm_apic_match_dest(vcpu, src, irq->shorthand,
                                         irq->dest_id, irq->dest_mode))
                         continue;
