--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -1210,6 +1210,8 @@ kvm_set_msi()  // msi的中断触发入口
  |   |   |   └─ entry->fields.remote_irr = 1; // 投递成功且电平触发模式
 ```
 
+就是将irq消息解析，然后构造发送给VCPU的LAPIC，后面和IOAPIC的相同。
+
 #### 5.4.3.2. msi的触发入口
 
 ```cpp
@@ -1229,7 +1231,6 @@ int kvm_set_msi(struct kvm_kernel_irq_routing_entry *e,
         return kvm_irq_delivery_to_apic(kvm, NULL, &irq, NULL);
 }
 ```
-
 
 就是将irq消息解析，然后构造发送给VCPU的LAPIC，后面和IOAPIC的相同。
 
