--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -37,7 +37,8 @@
   - [5.5. __apic_accept_irq(): LAPIC接收中断](#55-__apic_accept_irq-lapic接收中断)
 - [6. 中断具体注入过程](#6-中断具体注入过程)
   - [6.1. 整体流程](#61-整体流程)
-  - [6.2.](#62)
+  - [6.2. 具体注入入口: vcpu_enter_guest()](#62-具体注入入口-vcpu_enter_guest)
+  - [inject_pending_event(): 注入](#inject_pending_event-注入)
 - [7. 中断注入触发的源](#7-中断注入触发的源)
 - [8. 参考](#8-参考)
 
@@ -1469,13 +1470,13 @@ static inline void kvm_make_request(int req, struct kvm_vcpu *vcpu)
 ```cpp
 vcpu_enter_guest() // 物理CPU进入guest模式
  ├─ kvm_check_request(KVM_REQ_EVENT, vcpu) || req_int_win  // 检查是否有事件请求
- |   ├─ inject_pending_event(vcpu);      // 注入阻塞的事件，中断，异常和nmi
+ ├─ inject_pending_event(vcpu);      // 注入阻塞的事件，中断，异常和nmi
  ├─ kvm_x86_ops.run(vcpu) // 真正进入虚拟机模式
 
 
 ```
 
-## 6.2. 
+## 6.2. 具体注入入口: vcpu_enter_guest()
 
 在`vcpu_enter_guest` (x86.c)函数中,有这么一段代码
 
@@ -1531,7 +1532,7 @@ vcpu_enter_guest() // 物理CPU进入guest模式
 
 即在**进入非根模式之前**会检查`KVM_REQ_EVENT`事件，如果**存在pending的事件**，则调用`kvm_apic_accept_events`**接收**，这里主要是处理**APIC初始化期间**和**IPI中断**的，暂且不关注。
 
-之后会调用`inject_pending_event()`
+## inject_pending_event(): 注入
 
 ```cpp
 static int inject_pending_event(struct kvm_vcpu *vcpu)
