--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -38,8 +38,8 @@
 - [6. 中断具体注入过程](#6-中断具体注入过程)
   - [6.1. 整体流程](#61-整体流程)
   - [6.2. 具体注入入口: vcpu_enter_guest()](#62-具体注入入口-vcpu_enter_guest)
-  - [inject_pending_event(): 注入](#inject_pending_event-注入)
-- [7. 中断注入触发的源](#7-中断注入触发的源)
+  - [6.3. inject_pending_event(): 注入](#63-inject_pending_event-注入)
+- [7. 中断源](#7-中断源)
 - [8. 参考](#8-参考)
 
 <!-- /code_chunk_output -->
@@ -1532,7 +1532,7 @@ vcpu_enter_guest() // 物理CPU进入guest模式
 
 即在**进入非根模式之前**会检查`KVM_REQ_EVENT`事件，如果**存在pending的事件**，则调用`kvm_apic_accept_events`**接收**，这里主要是处理**APIC初始化期间**和**IPI中断**的，暂且不关注。
 
-## inject_pending_event(): 注入
+## 6.3. inject_pending_event(): 注入
 
 ```cpp
 static int inject_pending_event(struct kvm_vcpu *vcpu)
@@ -1727,7 +1727,7 @@ static void vmx_inject_irq(struct kvm_vcpu *vcpu)
 
 这样KVM就完成了虚拟中断的注入，从中断源触发到写入虚拟中断控制器，再到VMCS的过程。
 
-# 7. 中断注入触发的源
+# 7. 中断源
 
 最后再回过头来讲讲是什么时候触发这个`kvm_set_irq`的。当然**中断需要模拟的时候**就调用。这里调用分为两种。
 
@@ -1753,7 +1753,7 @@ int kvm_set_irq_level(kvm_context_t kvm, int irq, int level, int *status)
 }
 ```
 
-这里我就不分析QEMU中的中断源了，毕竟主要讲的是KVM
+这里我就不分析QEMU中的中断源了，具体见qemu部分
 
 # 8. 参考
 
