--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -1739,17 +1739,26 @@ static void vmx_inject_irq(struct kvm_vcpu *vcpu)
 
 在QEMU中，如果有中断触发，会触发到相应中断控制器，中断方式也有8259(hw/i8259.c), IOAPIC(hw/ipf.c x86下没用这个，pic和apic相同处理，将pic扩展到24个), MSI(hw/msix.c)，在这里中断控制器里面都会触发这个QEMU的`kvm_set_irq`函数。
 
-至于这个`kvm_set_irq`函数位置在`qemu-kvm.c`,在这个函数中进而调用`kvm_set_irq_level`,最后通过一个`KVM_IRQ_LINE`的IOCTL调用KVM模块里面的`kvm_set_irq`函数。
+最后通过一个`KVM_IRQ_LINE`的IOCTL调用KVM模块里面的`kvm_set_irq`函数。
 
 ```cpp
-int kvm_set_irq_level(kvm_context_t kvm, int irq, int level, int *status)
+// accel/kvm/kvm-all.c
+int kvm_set_irq(KVMState *s, int irq, int level)
 {
-   ... ...
-   event.level = level;
-   event.irq = irq;
-    /*IOCTL*/
-   r = kvm_vm_ioctl(kvm_state, kvm->irqchip_inject_ioctl, &event);
-    ... ...
+    struct kvm_irq_level event;
+    int ret;
+
+    assert(kvm_async_interrupts_enabled());
+
+    event.level = level;
+    event.irq = irq;
+    ret = kvm_vm_ioctl(s, s->irq_set_ioctl, &event);
+    if (ret < 0) {
+        perror("kvm_set_irq");
+        abort();
+    }
+
+    return (s->irq_set_ioctl == KVM_IRQ_LINE) ? 1 : event.status;
 }
 ```
 
