--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -1515,6 +1515,7 @@ vcpu_enter_guest() // 物理CPU进入guest模式
                          * 当使能了interrupt-window exiting或NMI-window exiting(由VMCS中相关字段控制)，
                          * 表示在刚进入虚拟机后，就会立刻因为有pending或注入的中断导致VM-exit
                          */
+                        // 不可屏蔽中断
                         if (vcpu->arch.nmi_pending)
                                 kvm_x86_ops.enable_nmi_window(vcpu);
                         // 收集中断
