--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -1561,6 +1561,7 @@ static int inject_pending_event(struct kvm_vcpu *vcpu)
          */
         // 如果存在老的还没有注入的中断，则注入之
         else if (!vcpu->arch.exception.pending) {
+                // nmi, 不可屏蔽中断
                 if (vcpu->arch.nmi_injected)
                         kvm_x86_ops.set_nmi(vcpu);
                 else if (vcpu->arch.interrupt.injected)
@@ -1655,7 +1656,10 @@ static int inject_pending_event(struct kvm_vcpu *vcpu)
 
 在这里会检查当前**是否有可注入的中断**，而具体检查过程时首先会通过`kvm_cpu_has_injectable_intr`函数，其中调用`kvm_apic_has_interrupt->apic_find_highest_irr->vmx_sync_pir_to_irr, vmx_sync_pir_to_irr`函数**对中断进行收集**，就是检查`vmx->pi_desc`中的**位图**，如果有，则会调用`kvm_apic_update_irr`把信息**更新到apic寄存器**里。
 
-然后调用`apic_search_irr`获取**IRR寄存器中的中断**，没找到的话会返回-1. 找到后调用`kvm_queue_interrupt`，**把中断记录到vcpu**中。
+然后调用`apic_search_irr`获取**IRR寄存器中的中断**，没找到的话会返回-1. 
+
+
+找到后调用`kvm_queue_interrupt`，**把中断记录到vcpu**中。
 
 ```cpp
 static inline void kvm_queue_interrupt(struct kvm_vcpu *vcpu, u8 vector,
