--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -1654,6 +1654,39 @@ static int inject_pending_event(struct kvm_vcpu *vcpu)
 }
 ```
 
+```cpp
+/*
+ * check if there is injectable interrupt:
+ * when virtual interrupt delivery enabled,
+ * interrupt from apic will handled by hardware,
+ * we don't need to check it here.
+ */
+int kvm_cpu_has_injectable_intr(struct kvm_vcpu *v)
+{
+        /*
+         * FIXME: interrupt.injected represents an interrupt that it's
+         * side-effects have already been applied (e.g. bit from IRR
+         * already moved to ISR). Therefore, it is incorrect to rely
+         * on interrupt.injected to know if there is a pending
+         * interrupt in the user-mode LAPIC.
+         * This leads to nVMX/nSVM not be able to distinguish
+         * if it should exit from L2 to L1 on EXTERNAL_INTERRUPT on
+         * pending interrupt or should re-inject an injected
+         * interrupt.
+         */
+        if (!lapic_in_kernel(v))
+                return v->arch.interrupt.injected;
+
+        if (kvm_cpu_has_extint(v))
+                return 1;
+
+        if (!is_guest_mode(v) && kvm_vcpu_apicv_active(v))
+                return 0;
+
+        return kvm_apic_has_interrupt(v) != -1; /* LAPIC */
+}
+```
+
 在这里会检查当前**是否有可注入的中断**，而具体检查过程时首先会通过`kvm_cpu_has_injectable_intr`函数，其中调用`kvm_apic_has_interrupt->apic_find_highest_irr->vmx_sync_pir_to_irr, vmx_sync_pir_to_irr`函数**对中断进行收集**，就是检查`vmx->pi_desc`中的**位图**，如果有，则会调用`kvm_apic_update_irr`把信息**更新到apic寄存器**里。
 
 然后调用`apic_search_irr`获取**IRR寄存器中的中断**，没找到的话会返回-1. 
