--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -1685,6 +1685,18 @@ int kvm_cpu_has_injectable_intr(struct kvm_vcpu *v)
 
         return kvm_apic_has_interrupt(v) != -1; /* LAPIC */
 }
+
+int kvm_apic_has_interrupt(struct kvm_vcpu *vcpu)
+{
+        struct kvm_lapic *apic = vcpu->arch.apic;
+        u32 ppr;
+
+        if (!kvm_apic_hw_enabled(apic))
+                return -1;
+
+        __apic_update_ppr(apic, &ppr);
+        return apic_has_interrupt_for_ppr(apic, ppr);
+}
 ```
 
 在这里会检查当前**是否有可注入的中断**，而具体检查过程时首先会通过`kvm_cpu_has_injectable_intr`函数，其中调用`kvm_apic_has_interrupt->apic_find_highest_irr->vmx_sync_pir_to_irr, vmx_sync_pir_to_irr`函数**对中断进行收集**，就是检查`vmx->pi_desc`中的**位图**，如果有，则会调用`kvm_apic_update_irr`把信息**更新到apic寄存器**里。
