--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -1470,6 +1470,7 @@ static inline void kvm_make_request(int req, struct kvm_vcpu *vcpu)
 ```cpp
 vcpu_enter_guest() // 物理CPU进入guest模式
  ├─ kvm_check_request(KVM_REQ_EVENT, vcpu) || req_int_win  // 检查是否有事件请求
+ ├─ kvm_apic_accept_events(vcpu);      // 
  ├─ inject_pending_event(vcpu);      // 注入阻塞的事件，中断，异常和nmi
  ├─ kvm_x86_ops.run(vcpu) // 真正进入虚拟机模式
 
@@ -1641,6 +1642,7 @@ static int inject_pending_event(struct kvm_vcpu *vcpu)
                         if (r != 0)
                                 return r;
                 }
+                // vcpu允许中断
                 if (kvm_x86_ops.interrupt_allowed(vcpu)) {
                         // 获得当前中断号, 将中断记录到vcpu中
                         kvm_queue_interrupt(vcpu, kvm_cpu_get_interrupt(vcpu),
@@ -1674,9 +1676,10 @@ int kvm_cpu_has_injectable_intr(struct kvm_vcpu *v)
          * pending interrupt or should re-inject an injected
          * interrupt.
          */
+        // lapic不是内核态, 直接返回
         if (!lapic_in_kernel(v))
                 return v->arch.interrupt.injected;
-
+        // 已经有外部中断
         if (kvm_cpu_has_extint(v))
                 return 1;
 
@@ -1686,6 +1689,7 @@ int kvm_cpu_has_injectable_intr(struct kvm_vcpu *v)
         return kvm_apic_has_interrupt(v) != -1; /* LAPIC */
 }
 
+// lapic是否有中断
 int kvm_apic_has_interrupt(struct kvm_vcpu *vcpu)
 {
         struct kvm_lapic *apic = vcpu->arch.apic;
