--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -894,7 +894,9 @@ kvm_set_ioapic_irq()  // ioapic的中断触发入口
  |   |   |   ├─ entry = ioapic->redirtbl[irq];   // 获取irq对应的ioapic中的重定向表项, 即RTE
  |   |   |   ├─ irqe.XXX = XXX  // 构建中断消息, 对应kvm_lapic_irq
  |   |   |   ├─ kvm_irq_delivery_to_apic(); // 将中断消息投递到lapic
- |   |   |   |   ├─    // 
+ |   |   |   |   ├─ kvm_for_each_vcpu(i, vcpu, kvm) {   // 遍历虚拟机的每个vcpu
+ |   |   |   |   ├─ kvm_apic_match_dest(); continue; // 如果vcpu不符合直接跳过
+ |   |   |   |   ├─ }
  |   |   |   |   └─ kvm_apic_set_irq();   // 
  |   |   |   └─ entry->fields.remote_irr = 1; // 投递成功且电平触发模式
 ```
@@ -1108,7 +1110,7 @@ int kvm_irq_delivery_to_apic(struct kvm *kvm, struct kvm_lapic *src,
         kvm_for_each_vcpu(i, vcpu, kvm) {
                 if (!kvm_apic_present(vcpu))
                         continue;
-                // 判断当前vcpu是否符合, 不符合跳过
+                // 判断vcpu是否符合, 不符合跳过
                 if (!kvm_apic_match_dest(vcpu, src, irq->shorthand,
                                         irq->dest_id, irq->dest_mode))
                         continue;
@@ -1296,6 +1298,7 @@ static int __apic_accept_irq(struct kvm_lapic *apic, int delivery_mode,
                         // 请求 KVM_REQ_EVENT 事件
                         // 在下次vm-entry的时候会进行中断注入
                         kvm_make_request(KVM_REQ_EVENT, vcpu);
+                        // 重新调度
                         kvm_vcpu_kick(vcpu);
                 }
                 break;
