--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -898,6 +898,7 @@ kvm_set_ioapic_irq()  // ioapic的中断触发入口
  |   |   |   |   ├─ kvm_apic_match_dest(); continue; // 如果vcpu不符合直接跳过
  |   |   |   |   ├─ }
  |   |   |   |   └─ kvm_apic_set_irq();   // 
+ |   |   |   |       ├─ struct kvm_lapic *apic = vcpu->arch.apic; // 获取vcpu的lapic
  |   |   |   └─ entry->fields.remote_irr = 1; // 投递成功且电平触发模式
 ```
 
