--- a/Vim/6. 多文件编辑: buffer、window和tab.md
+++ b/Vim/6. 多文件编辑: buffer、window和tab.md
@@ -55,7 +55,9 @@
 
 # 1. 整体介绍
 
-多文件编辑的场景太常见了：代码比对、项目重构、模块构建… 最初harttle在碰到这些问题时直接转向IDE了，其实Vim不仅支持多文件编辑，而且支持多种风格：标签页(tab)、窗口(window)、缓冲区(buffer)等。
+多文件编辑的场景太常见了：代码比对、项目重构、模块构建…
+
+其实Vim不仅支持多文件编辑，而且支持多种风格：标签页(tab)、窗口(window)、缓冲区(buffer)等。
 
 Vim 中的 window 和 tab 非常具有迷惑性，跟我们平时所说的 “窗口” 和 “标签页” ，是完全不同的两个概念，请看 vimdoc 给出的定义:
 
