--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -1161,7 +1161,7 @@ static int vcpu_run(struct kvm_vcpu *vcpu)
 }
 ```
 
-正常情况下，将kvm\_vcp\-\>arch.mp\_state的取值作为**单机未运行的取值**：`KVM_MP_STATE_RUNNABLE`；如果 vCPU 在 VM 中处于**其他状态**，则会**出错**。在运行中有一个**循环**，直到确认了**vcpu\_enter\_guest**函数执行完毕，即**物理CPU进入了GUEST状态**并且执行完成后，才会执行下一步操作。
+正常情况下，将`kvm_vcp->arch.mp_state`的取值作为**单机未运行**的取值：`KVM_MP_STATE_RUNNABLE`；如果 vCPU 在 VM 中处于**其他状态**，则会**出错**。在运行中有一个**循环**，直到确认了`vcpu_enter_guest()`函数执行完毕，即**物理CPU进入了GUEST状态**并且执行完成后，才会执行下一步操作。
 
 `vcpu_run`最终调用`vcpu_enter_guest`，该函数实现了**进入Guest**，并执行**Guest OS具体指令**的操作。对应于Intel平台，该函数为`vmx_vcpu_run`(设置**Guest CR3**和**其他寄存器**、**EPT/影子页表相关设置**、汇编代码VMLAUNCH切换到非根模式，执行Guest目标代码)。
 
